[package]
name = "tnl"
version = "0.2.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "Find files with missing trailing newlines."
readme = "README.md"
homepage = "https://github.com/uncenter/tnl"
repository = "https://github.com/uncenter/tnl"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
color-eyre = { version="0.6.2", default-features = false }
ignore = "0.4.20"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.0.13"
